load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application", "macos_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//tools/boss/installer:pkg.bzl", "boss_short_version_plist")

package(default_visibility = ["//visibility:private"])

exports_files([
    "Package.resolved",
    "Package.swift",
    "ghosttykit.BUILD",
])

swift_library(
    name = "boss_mac_app_lib",
    srcs = glob(["Sources/**/*.swift"]),
    copts = [
        # Mirror the swiftSettings define in Package.swift so @inlinable
        # Textual APIs (e.g. .textual.textSelection) expand correctly here.
        "-DTEXTUAL_ENABLE_TEXT_SELECTION",
        # Match Package.swift's `swift-tools-version: 6.2`. Without this,
        # bazel compiles under the rules_swift default (Swift 5 mode) and
        # silently skips the strict-concurrency diagnostics that
        # `swift run` would fire. CI then passes on changes that break
        # the dev workflow — see #601 (LogViewer.swift global formatter)
        # for a recent example.
        "-swift-version",
        "6",
        "-strict-concurrency=complete",
    ],
    module_name = "Boss",
    deps = [
        "//tools/boss/app-macos/Sources/UpdateCore",
        "@ghostty_kit//:GhosttyKit",
        "@swiftpkg_textual//:Textual",
    ],
)

# BossTests is sharded across four independent macos_unit_test targets so
# each one fits comfortably inside the "small" (60s) timeout as the suite
# grows (see CI timeout in exec_18bf0a6008fc0cc0_170). rules_apple's default
# macos test runner (apple/testing/default_runner) does not implement Bazel's
# native shard_count sharding protocol (no TEST_SHARD_INDEX/TEST_TOTAL_SHARDS
# handling), so `shard_count` on a single macos_unit_test is a no-op here —
# splitting into separate targets is the mechanism that actually parallelizes
# test execution for this rule.
#
# CommentsTests.swift + TranscriptViewTests.swift are split into their own
# shard because CommentLayerTests alone accounts for ~85% of total XCTest
# runtime (~12.8s of ~14.9s measured locally); bundling it with anything else
# risks that shard alone approaching the timeout. The remaining files are
# split into three buckets balanced by source line count.
macos_unit_test(
    name = "BossTestsCommentsTranscript",
    size = "small",
    minimum_os_version = "15.0",
    deps = [":boss_mac_app_tests_comments_transcript_lib"],
)

swift_library(
    name = "boss_mac_app_tests_comments_transcript_lib",
    testonly = True,
    srcs = [
        "Tests/BossTests/CommentsTests.swift",
        "Tests/BossTests/TranscriptViewTests.swift",
    ],
    copts = ["-DTEXTUAL_ENABLE_TEXT_SELECTION"],
    module_name = "BossTestsCommentsTranscript",
    deps = [":boss_mac_app_lib"],
)

macos_unit_test(
    name = "BossTestsShard1",
    size = "small",
    minimum_os_version = "15.0",
    deps = [":boss_mac_app_tests_shard1_lib"],
)

swift_library(
    name = "boss_mac_app_tests_shard1_lib",
    testonly = True,
    srcs = [
        "Tests/BossTests/APIKeyStoreTests.swift",
        "Tests/BossTests/ApplyAttentionGroupsListTests.swift",
        "Tests/BossTests/DesignsTests.swift",
        "Tests/BossTests/EngineAutoChoreKanbanTests.swift",
        "Tests/BossTests/KanbanExternalRefLinkTests.swift",
        "Tests/BossTests/KanbanRepoChipTests.swift",
        "Tests/BossTests/KanbanShortIDBadgeTests.swift",
        "Tests/BossTests/LogTailWindowTests.swift",
        "Tests/BossTests/LogViewerTailPerfTests.swift",
        "Tests/BossTests/MainThreadStallDiagnosticsTests.swift",
        "Tests/BossTests/OpenQuestionGroupsForDocPathTests.swift",
        "Tests/BossTests/PopulationTimingDiagnosticsTests.swift",
        "Tests/BossTests/ProductCreateFormCopyTests.swift",
        "Tests/BossTests/ProjectDesignDocAffordanceTests.swift",
        "Tests/BossTests/ProjectShortIDBadgeTests.swift",
        "Tests/BossTests/ReviewColumnOrderingTests.swift",
        "Tests/BossTests/WorkBlockedBadgeTests.swift",
        "Tests/BossTests/WorkerProcessKillerTests.swift",
        "Tests/BossTests/WorkersWorkspaceModelTests.swift",
    ],
    copts = ["-DTEXTUAL_ENABLE_TEXT_SELECTION"],
    module_name = "BossTestsShard1",
    deps = [":boss_mac_app_lib"],
)

macos_unit_test(
    name = "BossTestsShard2",
    size = "small",
    minimum_os_version = "15.0",
    deps = [":boss_mac_app_tests_shard2_lib"],
)

swift_library(
    name = "boss_mac_app_tests_shard2_lib",
    testonly = True,
    srcs = [
        "Tests/BossTests/ActiveProductsFilterTests.swift",
        "Tests/BossTests/ActivityLogTests.swift",
        "Tests/BossTests/AttentionGroupsListRaceTests.swift",
        "Tests/BossTests/EffortChipTests.swift",
        "Tests/BossTests/EngineClientLargeMessageFramingTests.swift",
        "Tests/BossTests/EngineHealthBannerTests.swift",
        "Tests/BossTests/EngineUnreachableErrorRoutingTests.swift",
        "Tests/BossTests/ExternalTrackerAttentionTests.swift",
        "Tests/BossTests/ExternalTrackerTests.swift",
        "Tests/BossTests/GitHubAuthTests.swift",
        "Tests/BossTests/GitHubContentFetcherTests.swift",
        "Tests/BossTests/InvestigationKanbanTests.swift",
        "Tests/BossTests/KanbanFilterBannerTests.swift",
        "Tests/BossTests/KanbanInRevisionWarningTests.swift",
        "Tests/BossTests/KanbanPRLinkLabelTests.swift",
        "Tests/BossTests/ProjectArchiveContextMenuTests.swift",
        "Tests/BossTests/ProjectNavigatorCountBadgeTests.swift",
        "Tests/BossTests/WorkDependencyKanbanTests.swift",
        "Tests/BossTests/WorkItemRepoRowTests.swift",
    ],
    copts = ["-DTEXTUAL_ENABLE_TEXT_SELECTION"],
    module_name = "BossTestsShard2",
    deps = [":boss_mac_app_lib"],
)

macos_unit_test(
    name = "BossTestsShard3",
    size = "small",
    minimum_os_version = "15.0",
    deps = [":boss_mac_app_tests_shard3_lib"],
)

swift_library(
    name = "boss_mac_app_tests_shard3_lib",
    testonly = True,
    srcs = [
        "Tests/BossTests/AttentionScoreOrderingTests.swift",
        "Tests/BossTests/AttentionsTests.swift",
        "Tests/BossTests/AutomationTimeTests.swift",
        "Tests/BossTests/AwaitingInputKanbanTests.swift",
        "Tests/BossTests/ConflictBadgeMutualExclusionTests.swift",
        "Tests/BossTests/ConflictClearedBadgeTests.swift",
        "Tests/BossTests/ConflictResolutionKanbanTests.swift",
        "Tests/BossTests/DesignDocPointerTests.swift",
        "Tests/BossTests/DispatchPendingKanbanTests.swift",
        "Tests/BossTests/InvestigationDocLinkAffordanceTests.swift",
        "Tests/BossTests/OptimisticKanbanMoveTests.swift",
        "Tests/BossTests/RevealClearsFiltersTests.swift",
        "Tests/BossTests/RevealRevisionRollupTests.swift",
        "Tests/BossTests/ReviewNotificationTests.swift",
        "Tests/BossTests/RevisionKanbanTests.swift",
        "Tests/BossTests/TerminalLoopDiagnosticsTests.swift",
        "Tests/BossTests/TestSourcesDoNotCallRealOpenerTests.swift",
        "Tests/BossTests/WorkCreateRepoFieldTests.swift",
        "Tests/BossTests/WorkerStalenessTests.swift",
    ],
    copts = ["-DTEXTUAL_ENABLE_TEXT_SELECTION"],
    module_name = "BossTestsShard3",
    deps = [":boss_mac_app_lib"],
)

# Stamps CFBundleShortVersionString (full version, e.g. "1.0.4-dev-f3be785") and
# CFBundleVersion (numeric-only, e.g. "1.0.4") from workspace-status.sh stable keys.
# Both keys are in one plist to ensure our values are the final word — using
# apple_bundle_version alongside infoplists caused apple_bundle_version's version
# provider to be merged after infoplists, silently overriding CFBundleShortVersionString.
boss_short_version_plist(
    name = "boss_version_plist",
    out = "BossVersion.plist",
    visibility = ["//visibility:private"],
)

macos_application(
    name = "Boss",
    # Bundle the engine and the Boss CLIs into Contents/Resources/bin/ so that
    # a single `bazel build //tools/boss/app-macos:Boss` produces a fully
    # self-contained .app (design doc Q3 on-disk layout, Q4 Phase 1).
    # cube is bundled so the engine can find it even when the macOS GUI launchd
    # PATH excludes the user's shell PATH (see config.rs resolve_cube_command).
    # Workers run inside Ghostty terminal panes and inherit the user's shell PATH,
    # so they continue to resolve cube (and jj, gh, claude, etc.) from PATH.
    additional_contents = {
        "//tools/boss/engine/core:engine": "Resources/bin",
        "//tools/boss/cli:boss": "Resources/bin",
        "//tools/boss/bossctl:bossctl": "Resources/bin",
        "//tools/boss/event-shim:boss-event": "Resources/bin",
        "//tools/cube:cube": "Resources/bin",
        "//tools/boss/app-macos/Sources/Resources/TrekIcons:trek_icons": "Resources/TrekIcons",
        # relaunch-helper.sh: the detached swap/relaunch watchdog the app spawns
        # after UpdateInstaller (UpdateCore) stages the new bundle in-process.
        # Bundled at Resources/ top level so the app resolves it with
        # Bundle.main.url(forResource: "relaunch-helper", withExtension: "sh").
        "//tools/boss/app-macos/Sources/Resources/RelaunchHelper:relaunch_helper": "Resources",
    },
    bundle_id = "dev.spinyfin.bossmacapp",
    infoplists = [
        "Info.plist",
        ":boss_version_plist",
    ],
    minimum_os_version = "15.0",
    visibility = ["//tools/boss/installer:__pkg__"],
    deps = [":boss_mac_app_lib"],
)
