load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "bossctl",
    srcs = [
        "src/comments.rs",
        "src/logs.rs",
        "src/main.rs",
        "src/review.rs",
        "src/tests.rs",
    ],
    compile_data = [
        # Stamped build-info constants (BOSS_VERSION, BOSS_GIT_SHA, BOSS_BUILD_TIME).
        # Referenced via include!(env!("BOSS_BUILD_INFO_RS")) in build_info_stamp module.
        "//tools/boss/installer:build_info_rs",
    ],
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    rustc_env = {
        # Absolute path to the generated build-info constants file.
        # rules_rust prefixes $(execpath) values with ${pwd} and resolves
        # them to absolute filesystem paths before invoking rustc.
        "BOSS_BUILD_INFO_RS": "$(execpath //tools/boss/installer:build_info_rs)",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//tools/boss/client",
        "//tools/boss/engine/core:engine_lib",
        "//tools/boss/log-files",
        "//tools/boss/protocol",
    ] + all_crate_deps(normal = True),
)

rust_test(
    name = "bossctl_test",
    size = "small",
    crate = ":bossctl",
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//tools/boss/client",
        "//tools/boss/engine/core:engine_lib",
        "//tools/boss/log-files",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
