load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

rust_library(
    name = "claude_client",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "boss_claude_client",
    crate_root = "src/lib.rs",
    edition = "2024",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = [
        "//tools/boss:__subpackages__",
    ],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "claude_client_test",
    size = "small",
    crate = ":claude_client",
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
