[package]
name = "boss-claude-client"
version.workspace = true
edition.workspace = true
workspace = "../../.."

[dependencies]
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
bon = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }
