[package]
name = "boss-claude-client"
version.workspace = true
edition.workspace = true
workspace = "../../.."

[dependencies]
boss-http-retry = { path = "../http_retry" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
bon = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }
