load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files(["Cargo.toml"])

rust_binary(
    name = "boss",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//tools/boss/engine:engine_lib",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)
