load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

exports_files(["Cargo.toml"])

rust_binary(
    name = "boss",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_test(
    name = "boss_test",
    crate = ":boss",
    deps = [
        "//tools/boss/client",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)

# End-to-end coverage for the `boss` CLI's typed-id → product inference.
# Spawns an in-process engine and drives the `boss` binary as a real
# subprocess; the data dep stages it into the test's runfiles tree at
# `$RUNFILES_DIR/_main/tools/boss/cli/boss`.
rust_test(
    name = "infer_product_test",
    srcs = ["tests/infer_product.rs"],
    edition = "2024",
    data = [":boss"],
    deps = [
        "//tools/boss/client",
        "//tools/boss/engine:engine_lib",
        "//tools/boss/protocol",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
)
