[package]
name = "boss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
boss-engine = { path = "../engine" }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["full"] }

