load("@mono_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

exports_files(["Cargo.toml"])

rust_library(
    name = "client",
    crate_name = "boss_client",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = [
        "//tools/boss:__subpackages__",
    ],
    deps = [
        "//tools/boss/protocol",
    ] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)
